rearrange top-level dom structures

--- a/global.css
+++ b/global.css
@@ -1,3 +1,10 @@
+main {
+    height: 100%;
+    font: 300 12px/1.2 "Iosevka Aile";
+    word-break: break-word;
+    background: #222;
+    color: white;
+}
 * + p,
 * + blockquote {
     margin-top: 0.6em;
