--- a/reset.css
+++ b/reset.css
@@ -43,8 +43,8 @@ video,
 object,
 embed {
   display: block;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   border: none;
 }
 
