--- a/reset.css
+++ b/reset.css
@@ -36,10 +36,15 @@ button {
   cursor: pointer;
 }
 
-svg,
 img,
-iframe,
+svg {
+  display: inline-block;
+  max-width: 100%;
+  max-height: 100%;
+}
+
 video,
+iframe,
 object,
 embed {
   display: block;
