--- a/global.css
+++ b/global.css
@@ -5,13 +5,18 @@ a {
     color: cadetblue;
 }
 blockquote {
-    margin: 8px 0;
     padding-left: 0.6em;
-    border-left: 4px solid gray;
+    border-left: 4px solid #ccc;
     color: #999;
+}
+blockquote + p {
+    margin-top: 8px;
 }
 main {
     height: 100%;
+}
+p + blockquote {
+    margin-top: 8px;
 }
 p + p {
     margin-top: 8px;
