--- a/r.css
+++ b/r.css
@@ -13,17 +13,10 @@ blockquote,
 figure,
 figcaption,
 menu,
-ol,
-ul,
 dl,
 dd {
 	margin: 0;
 	padding: 0;
-}
-
-ol,
-ul {
-	list-style: none;
 }
 
 h1,
@@ -32,7 +25,7 @@ h3,
 h4,
 h5,
 h6 {
-	margin: 0;
+	margin-top: 0;
 }
 
 button,
@@ -40,7 +33,7 @@ input,
 textarea,
 select {
 	padding: 0;
-	background: inherit;
+	background: transparent;
 	border: none;
 	color: inherit;
 	font: inherit;
