--- a/a.css
+++ b/a.css
@@ -15,41 +15,32 @@
 	margin-top: 0.33em;
 }
 a {
-	color: slateblue;
+	color: inherit;
+	text-decoration: none;
 }
-a:visited {
-	color: rosybrown;
+a:hover,
+button:hover {
+	background: #333;
 }
 blockquote {
 	padding-left: 0.66em;
 	border-left: 0.33em solid #666;
 	color: #999;
 }
-button {
-	text-transform: uppercase;
-}
 kbd {
-	font: bold 1rem monospace;
+	font: 1rem monospace;
 	margin: 0 0.5rem;
 	padding: 0 0.5rem;
 	height: 2rem;
-	border: 1px solid;
-	border-radius: 0.5rem;
+	background: #333;
+	color: white;
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
 }
-h6 {
-	font-size: 1em;
-	font-weight: normal;
-	text-decoration: underline;
-}
 table {
 	border-spacing: 1rem;
-	font: 0.5rem monospace;
-}
-.body > .comment > .head {
-	border-left: 1px solid rgba(0,0,0,0.1);
+	font-size: 0.5rem;
 }
 .error-tag {
 	padding: 0 1px;
