Parse images into RedditImage objects; small changes to post layout

--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,42 @@
+/*  */
+@font-face {
+	font-family: 'Karla';
+	src: '/fonts/Karla-VariableFont_wght.ttf' format('ttf');
+	font-weight: 200 800;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Karla';
+	src: '/fonts/Karla-Italic-VariableFont_wght.ttf' format('ttf');
+	font-weight: 200 800;
+	font-style: italic;
+}
+/*  */
+@font-face {
+	font-family: 'Lora';
+	src: '/fonts/Lora-VariableFont_wght.ttf' format('ttf');
+	font-weight: 400 700;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Lora';
+	src: '/fonts/Lora-Italic-VariableFont_wght.ttf' format('ttf');
+	font-weight: 400 700;
+	font-style: italic;
+}
+/*  */
+@font-face {
+	font-family: 'PlayfairDisplay';
+	src: '/fonts/PlayfairDisplay-VariableFont_wght.ttf' format('ttf');
+	font-weight: 400 900;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'PlayfairDisplay';
+	src: '/fonts/PlayfairDisplay-Italic-VariableFont_wght.ttf' format('ttf');
+	font-weight: 400 900;
+	font-style: italic;
+}
 *:focus {
 	outline: none;
 }
