--- a/styles/app.css
+++ b/styles/app.css
@@ -52,7 +52,7 @@
 }
 a {
 	color: inherit;
-	text-decoration: none;
+	word-break: break-all;
 }
 a:hover,
 button:hover {
@@ -62,6 +62,15 @@ blockquote {
 	padding-left: 1ch;
 	border-left: 0.5ch solid #666;
 	color: #999;
+}
+body {
+	width: 100vw;
+	height: 100vh;
+	display: grid;
+	grid-template-columns: 1fr 2fr;
+	overflow: hidden;
+	background: #fed;
+	font: 400 14px/1.5 'IBM Plex Sans', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
 }
 kbd {
 	font: 1rem monospace;
@@ -77,22 +86,6 @@ kbd {
 table {
 	border-spacing: 1ch;
 	font-size: 0.5rem;
-}
-.badge {
-	display: inline-block;
-	margin-right: 1ch;
-}
-.badge-op {
-	color: lightskyblue;
-}
-.badge-mod {
-	color: darkseagreen;
-}
-.badge-admin {
-	color: lightcoral;
-}
-.badge-special {
-	color: magenta;
 }
 .error-tag {
 	padding: 0 1px;
