--- a/src/views/HEADER.pug
+++ b/src/views/HEADER.pug
@@ -3,14 +3,15 @@ script.
 	import Avatar from '/src/components/Avatar'
 	import Subreddit from '/src/components/Subreddit'
 
-nav#global-nav
-	{#if subscriptions.length}
-		#subscriptions
-			ol#user-subscriptions
+header.h-32.flex
+	a.block.w-32.bg-black
+	{#if subscriptions}
+		#subscriptions.flex-grow.flex
+			ol.flex
 				{#each subscriptions.users as user}
 					li
 						Avatar(user={user})
-			ol#subreddit-subscriptions
+			ol.flex
 				{#each subscriptions.subreddits as name}
 					li
 						Subreddit(name={name})
@@ -20,21 +21,3 @@ nav#global-nav
 	#account-switcher
 		button Account...
 		Avatar(user='')
-
-style.
-	#global-nav
-		height 100%
-		display flex
-		overflow auto
-	#subscriptions
-		flex 1
-		display flex
-	#subreddit-subscriptions
-	#user-subscriptions
-		display flex
-	li
-		list-style none
-		margin 1ch 0
-	#quick-settings
-	#account-switcher
-		display flex
