--- a/src/views/COMMENTS.pug
+++ b/src/views/COMMENTS.pug
@@ -4,39 +4,12 @@ script.
 
 {#await comments}
 {:then list}
-	#comments
+	#comments.overflow-auto
 		{#each list as topLevelComment}
-			#top-level-comment
-				Comment(comment={topLevelComment})
+			Comment(comment={topLevelComment})
 		{:else}
 			#nocomments
 				button#add-first-comment ADD THE FIRST COMMENT
 {:catch error}
 	.error-tag ERROR LOADING COMMENTS
 	.error-message {error}
-
-style.
-	#comments
-		flex 1
-		display flex
-		flex-flow row wrap
-		place-content flex-start
-		overflow auto
-	#top-level-comment
-		width 320px
-		max-height 100%
-	#nocomments
-		height 100%
-		display flex
-		justify-content center
-		align-items center
-		text-align center
-		font-weight 900
-		color salmon
-	#add-first-comment
-		padding 40px
-		border 1px dotted
-		&:hover
-		&:focus
-			border-style solid
-			text-decoration underline
