--- a/src/views/MAIN.pug
+++ b/src/views/MAIN.pug
@@ -7,6 +7,7 @@ script.
 	import RedditMessage from '/src/objects/RedditMessage'
 	import RedditPost from '/src/objects/RedditPost'
 	import COMMENTS from '/src/views/COMMENTS'
+	import ESSAY from '/src/views/ESSAY'
 	import GALLERY from '/src/views/GALLERY'
 	story = null
 	select = (newStory) ->
@@ -14,7 +15,16 @@ script.
 
 main
 	.border-4.border-gray-400.h-full
-		h1 {feed.id}
+		.h-64.border-b-4.border-gray-300.flex
+			{#await feed.sidebar}
+			{:then sidebar}
+				img.h-64.w-64.bg-gray-500(src={sidebar.community_icon})
+			h1 {feed.id}
+			{#await feed.sidebar}
+			{:then sidebar}
+				data {sidebar.accounts_active}
+				data {sidebar.subscribers}
+		.h-96.border-b-4.border-gray-300
 		ol
 			{#each feed.fragments as fragment}
 				{#await fragment()}
@@ -49,8 +59,7 @@ main
 							.error-message {error}
 					{:else if data.content.type === 'text'}
 						{#if data.content.text.length}
-							#text
-								{@html data.content.text}
+							ESSAY(text={data.content.text})
 					{:else if data.content.type === 'image'}
 						GALLERY(images={data.content.images})
 					{:else}
@@ -82,5 +91,5 @@ style.
 	main
 		height calc(100% - 32px)
 		display grid
-		grid-template-columns 480px 960px 480px
+		grid-template-columns 476px 968px 476px
 		grid-template-rows 100%
